# qa_guru_mobile

./: .gitignore  pyproject.toml
tests/: conftest.py
tests/android/: test_wikipedia.py
